fix content spacing

--- a/style.css
+++ b/style.css
@@ -477,7 +477,7 @@ body {
     .wrappingUpContainer h2{
         font-size: 36px;
         color: white;
-
+        
     }
     .wrappingUpContainer p{
         width: 500px;
@@ -490,7 +490,7 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-
+        
     }
     .closeContainer {
         height:1000px;
@@ -498,17 +498,17 @@ body {
         display: flex;
         flex-direction: row;
         margin-top: 60px;
-
-
+        
+        
     }
     .closeContainer h2 {
         width: 500px;
         text-align: center;
         font-weight: 400;
-
+        
         font-size: 36px;
         text-transform: capitalize;
-
+        
     }
     .testimonialWrapper img {
         height: 22px;
@@ -516,18 +516,19 @@ body {
     .rightClose p {
         font-weight: 400;
         font-size: 16px;
-
+        
     }
     .rightClose {
-            width: 600px;
-            font-size: 16px;
-
+        width: 600px;
+        font-size: 16px;
+        
     }
     .bottomCloseContainer{
         height: 500px;
         width: 690px;
         display: flex;
         flex-direction: row;
+        align-content: space-between;
         margin-top: 20px;
     }
     .bottomCloseContainer h3{
@@ -538,20 +539,19 @@ body {
         text-align: center;
     }
     .leftBC {
-        width: 1100px;
+        width: 500px;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
+        ;
     }
 
     .rightBC img{
         width: 140px;
         margin: 20px;
         text-align: center;
-
         
-
     }
     .rightBC {
         display: flex;
@@ -559,7 +559,7 @@ body {
         align-items: center;
     }
     .rightBC p {
-       text-align: center;
+        text-align: center;
        font-size: 12px;
 
     }
@@ -568,7 +568,7 @@ body {
         margin-top: 30px;
     }
     .CtaButton{
-        height: 150px;
+        height: 200px;
         width: 230px;
         background-color:#5A4FF3 ;
         border: none;
@@ -590,8 +590,18 @@ body {
         font-size: 46px;
     }
     #timerMinutes p{
-        font-size: 56px;
+        font-size: 26px;
+        color: #b8b7c7;
+        margin-top: -14px;
+
         
+    }
+    footer{
+        height: 100px;
+        width: 100%;
+        background-color: rgb(255, 255, 255);
+        margin-top: 40px;
+
     }
 
     @media screen and (max-width: 1000px){
